{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 436,
  "lineage": "e0248183-3d75-2e04-49c0-f313fb622406",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mig",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-16T18:43:21.703-08:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eunoia0523/global/firewalls/tf-vpc-allow-web-mig",
            "log_config": [],
            "name": "tf-vpc-allow-web-mig",
            "network": "https://www.googleapis.com/compute/v1/projects/eunoia0523/global/networks/tf-vpc",
            "priority": 1000,
            "project": "eunoia0523",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eunoia0523/global/firewalls/tf-vpc-allow-web-mig",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-mig"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-16T18:43:21.715-08:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eunoia0523/global/firewalls/tf-vpc-allow-ssh",
            "log_config": [],
            "name": "tf-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/eunoia0523/global/networks/tf-vpc",
            "priority": 1000,
            "project": "eunoia0523",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eunoia0523/global/firewalls/tf-vpc-allow-ssh",
            "source_ranges": [
              "210.223.188.157/32",
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-16T18:43:21.729-08:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eunoia0523/global/firewalls/tf-vpc-allow-web",
            "log_config": [],
            "name": "tf-vpc-allow-web",
            "network": "https://www.googleapis.com/compute/v1/projects/eunoia0523/global/networks/tf-vpc",
            "priority": 1000,
            "project": "eunoia0523",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eunoia0523/global/firewalls/tf-vpc-allow-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rocky-linux-cloud/global/images/rocky-linux-8-optimized-gcp-v20221102",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/eunoia0523/zones/asia-northeast3-a/disks/bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/eunoia0523/zones/asia-northeast3-a/instances/bastion",
            "instance_id": "938986090106961126",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "yIkU3VBRCcs=",
            "metadata_startup_script": "  echo \"export USE_GKE_GCLOUD_AUTH_PLUGIN=True\" \u003e\u003e /etc/profile\n  sudo yum install -y google-cloud-sdk-gke-gcloud-auth-plugin\n  sudo yum install -y kubectl\n  sudo yum install -y bash-completion\n  source \u003c(kubectl completion bash)\n  echo \"gcloud container clusters get-credentials tf-eb-cluster --zone asia-northeast3 --project eunoia0523 \u003e /dev/null 2\u003e\u00261\" \u003e\u003e /etc/profile\n  echo \"source \u003c(kubectl complet [...]
            "name": "bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.64.73.186",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/eunoia0523/global/networks/tf-vpc",
                "network_ip": "10.0.0.41",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/eunoia0523/regions/asia-northeast3/subnetworks/tf-subnet",
                "subnetwork_project": "eunoia0523"
              }
            ],
            "project": "eunoia0523",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/eunoia0523/zones/asia-northeast3-a/instances/bastion",
            "service_account": [
              {
                "email": "1029450175593-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "asia-northeast3-a"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "data.template_file.startup_script",
            "google_compute_network.tf_vpc",
            "google_compute_subnetwork.tf_subnet",
            "google_container_cluster.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/eunoia0523/global/networks/tf-vpc",
            "mtu": 1460,
            "name": "tf-vpc",
            "project": "eunoia0523",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eunoia0523/global/networks/tf-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "tf_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-16T18:43:23.747-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/eunoia0523/regions/asia-northeast3/subnetworks/tf-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "tf-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/eunoia0523/global/networks/tf-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "eunoia0523",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.120.0.0/20",
                "range_name": "gke-tf-eb-cluster-services-45eeccdf"
              },
              {
                "ip_cidr_range": "10.116.0.0/14",
                "range_name": "gke-tf-eb-cluster-pods-45eeccdf"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/eunoia0523/regions/asia-northeast3/subnetworks/tf-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.tf_vpc"
          ]
        }
      ]
    }
  ]
}